[package]
name = "borys"
version = "0.1.0"
authors = ["Borys Minaiev <bminaiev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
imageproc = "0.22.0"
image = "0.23.14"
rusttype = "0.9.2"